--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,10 @@
     background-color: #676767;
 }
 
+.bg-color-three-reasons{
+    background-color: #fff;
+}
+
 .ui-menu-color-home{
     background-color: #e67e22;
 }
@@ -20,6 +24,10 @@
 
 .ui-menu-color-download{
     background-color: #525252;
+}
+
+a {
+    color: #fafafa;
 }
 
 /*--------------------------------------------Special paddins/margins/text */
@@ -40,6 +48,23 @@ h1, h2, h3, h4 {
 
 .inline-block{
     display: inline-block;
+}
+
+.row-table{
+    display: table;
+}
+
+.section-column{
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
+
+.section-heading{
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
 }
 
 /*--------------------------------------------Heading*/
@@ -144,13 +169,13 @@ footer {
 
 .cv-pdf i {
     font-size: 18px;
-    color: #fafafa
+    color: #fafafa;
     text-align: center;
     padding-left: 5px;
-    transition: all 0.35s easy-in-out;
-    -moz-transition: all 0.35s easy-in-out;
-    -webkit-transition: all 0.35s easy-in-out;
-    -o-transition: all 0.35s easy-in-out;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
 }
 
 .cv-pdf i:hover {
