--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,3 +260,21 @@ footer {
     position: relative;
     width: 60%;
 }
+
+/*--------------------------------------------Skills */
+
+.progress{
+    height: 25px;
+    position: relative;
+    margin-bottom: 4px;
+    
+}
+
+.progress-type{
+    position: absolute;
+    left: 0px;
+    font-weight: 400;
+    padding: 3px 30px 2px 10px;
+    color: #fafafa;
+    background-color: rgba(25, 25, 25, 0.2);
+}
