--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,10 @@
     background-color: #3498db;
 }
 
+.bg-color-contact {
+    background-color: #fff;
+}
+
 .ui-menu-color-download{
     background-color: #525252;
 }
@@ -335,4 +339,13 @@ footer {
 
 .history-item {
     margin-bottom: 30px;
+}
+
+/*--------------------------------------------Contact Form */
+
+.contact-heading {
+    font-family: "Exo" sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 20px;
 }
